--- a/site/post-003/index.html
+++ b/site/post-003/index.html
@@ -2,6 +2,8 @@
 <!doctype html>
 <html lang="en" class="no-js">
   <head>
+
+       <meta name="description" property="og:description" content="foo bar">
     
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width,initial-scale=1">
