--- a/site/post-003/index.html
+++ b/site/post-003/index.html
@@ -3,7 +3,7 @@
 <html lang="en" class="no-js">
   <head>
 
-       <meta name="description" property="og:description" content="foo bar">
+      <meta name="image" property="og:image" content="#">
     
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width,initial-scale=1">
