--- a/site/post-001/index.html
+++ b/site/post-001/index.html
@@ -533,6 +533,9 @@
 <div class="em-nav-arrow">
 <p><span class="em-float-right"><a href="/post-002" title="Choosing the next EM&thinsp;&bull;&thinsp;MCU target hardware">&curarr;</a></span></p>
 </div>
+<figure id="fig0" style="display:none">
+<p><a class="glightbox" href="/assets/summary-001.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Image info" src="/assets/summary-001.png" /></a></p>
+</figure>
 <h2 id="slowly-opening-the-doors">Slowly opening the doors</h2>
 <p>You have no idea how much "stuff" has accumulated in the EM software {&thinsp;basement&thinsp;|&thinsp;attic&thinsp;|&thinsp;garage&thinsp;} since the language's initial debut back in 2010:</p>
 <div class="em-ul em-ul-bull">
@@ -553,7 +556,7 @@
 </li>
 </ol>
 <p>These constraints, in fact, have enabled to us to better focus on EM itself &ndash; introducing the language and its runtime with a 10,000' technical overview followed by live, on-the-ground tours of curated programming examples.</p>
-<p>Though rudimentary in design, these examples already hint at EM's uncanny ability to reduce program size when benchmarked against C&thinsp;/&nbsp;C++.&nbsp; The SDK also contains <em>state</em> and <em>energy</em> traces for these examples &ndash; captured in real-time using popular logic and power analyzers.</p>
+<p>Though rudimentary in design, these examples already hint at EM's uncanny ability to reduce program size when benchmarked against C/C++&thinsp;.&nbsp; The SDK also contains <em>state</em> and <em>energy</em> traces for these examples &ndash; captured in real-time using popular logic and power analyzers.</p>
 <p>And while we've (obviously) grown fond of EM and would surely attest to its positive impact on software productivity, EM's promise of higher-level programming <em>and</em>&thinsp; higher-levels of per&shy;formance ultimately comes down to simple software metrics &ndash; size, speed, <em>and</em>&thinsp; energy.</p>
 <p>Stay engaged at <a href="/">blog.openen.org</a>&thinsp;:&nbsp;&nbsp; Upcoming posts will have more to say about the EM language in general, while soliciting your input on <em>"now what"</em>&nbsp;for the <strong>EM-SDK</strong>&thinsp;.</p>
 <h2 id="what-can-you-do-to-help">What can you do to help</h2>
