--- a/site/post-002/index.html
+++ b/site/post-002/index.html
@@ -554,7 +554,7 @@
 <p><a href="/post-001" title="EM has finally arrived &ndash; now what&thinsp;???">&cularr;</a>  <span class="em-float-right"><a href="/post-003" title="Benchmark[et]ing ultra-low-power with EM">&curarr;</a></span></p>
 </div>
 <h2 id="general-mcu-requirements">General MCU requirements</h2>
-<p>In theory, the EM language and runtime can target <em>any</em>&thinsp; MCU supported by a C&thinsp;/&thinsp;C++ com&shy;piler.&nbsp;  In practice, however, we'll generally consider other factors when choosing MCU hardware:</p>
+<p>In theory, the EM language and runtime can target <em>any</em>&thinsp; MCU supported by a C/C++ com&shy;piler.&nbsp;  In practice, however, we'll generally consider other factors when choosing MCU hardware:</p>
 <div class="em-ul em-ul-bull">
 <p>availability of relatively inexpensive MCU development board(s) in the marketplace</p>
 <p>the more "modest" the MCU, the better &ndash; simple CPU, limited memory, basic peripherals</p>
