--- a/site/post-004/index.html
+++ b/site/post-004/index.html
@@ -540,7 +540,8 @@
 <!-- more -->
 
 <div class="em-nav-arrow">
-<p><a href="/post-003" title="Benchmark[et]ing ultra-low-power with EM">&cularr;</a></p>
+<p><a href="/post-003" title="Benchmark[et]ing ultra-low-power with EM">&cularr;</a>
+<span class="em-float-right"><a href="/post-005" title="EM&thinsp;.&thinsp;optimize = WPO&thinsp;+&thinsp;ACO">&curarr;</a></span></p>
 </div>
 <figure id="fig0" style="display:none">
 <p><a class="glightbox" href="/assets/summary-004.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Image info" src="/assets/summary-004.png" /></a></p>
