--- a/site/post-002/index.html
+++ b/site/post-002/index.html
@@ -553,6 +553,9 @@
 <div class="em-nav-arrow">
 <p><a href="/post-001" title="EM has finally arrived &ndash; now what&thinsp;???">&cularr;</a>  <span class="em-float-right"><a href="/post-003" title="Benchmark[et]ing ultra-low-power with EM">&curarr;</a></span></p>
 </div>
+<figure id="fig0" style="display:none">
+<p><a class="glightbox" href="/assets/summary-002.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Image info" src="/assets/summary-002.png" /></a></p>
+</figure>
 <h2 id="general-mcu-requirements">General MCU requirements</h2>
 <p>In theory, the EM language and runtime can target <em>any</em>&thinsp; MCU supported by a C/C++ com&shy;piler.&nbsp;  In practice, however, we'll generally consider other factors when choosing MCU hardware:</p>
 <div class="em-ul em-ul-bull">
