--- a/site/post-007/index.html
+++ b/site/post-007/index.html
@@ -535,6 +535,9 @@
 <div class="em-nav-arrow">
 <p><a href="/post-006" title="CoreMark reimagined &ndash; the EM&bull;Mark suite">&cularr;</a></p>
 </div>
+<figure id="fig0" style="display:none">
+<p><a class="glightbox" href="/assets/summary-007.png" data-type="image" data-width="100%" data-height="auto" data-desc-position="bottom"><img alt="Image info" src="/assets/summary-007.png" /></a></p>
+</figure>
 <p>In the short six weeks since launching <strong>Blogging EM</strong>, the IT department has informed us that the number of (unique) users viewing these short posts now numbers in the low hundreds; and based on average engagement time, some of you have actually read this material&thinsp;!!!</p>
 <h2 id="leaving-a-comment">Leaving a comment</h2>
 <p>Each post ends with a special <strong>comments</strong> section asking you to&nbsp; <span class="em-small"><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/></svg></span>&nbsp; <strong>Sign in with GitHub</strong></span>; needless to say, you'll need to visit <a href="https://github.com/join">github.com/join</a>&thinsp; if you don't already have a GitHub account.</p>
