--- a/site/post-006/index.html
+++ b/site/post-006/index.html
@@ -619,7 +619,7 @@
 </tr>
 <tr>
 <td style="text-align: left;"><span class="em-color-teal"><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 0 0 2 12a10 10 0 0 0 10 10 10 10 0 0 0 10-10A10 10 0 0 0 12 2m1 5h-2v4H7v2h4v4h2v-4h4v-2h-4V7Z"/></svg></span></span>&ensp; <strong>energy efficiency</strong></td>
-<td style="text-align: left;"><span class="em-color-orange"><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M4 11v2h12l-5.5 5.5 1.42 1.42L19.84 12l-7.92-7.92L10.5 5.5 16 11H4Z"/></svg></span></span>&nbsp; one benchmark iteration ater awakening from one second of deep-sleep</td>
+<td style="text-align: left;"><span class="em-color-orange"><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M4 11v2h12l-5.5 5.5 1.42 1.42L19.84 12l-7.92-7.92L10.5 5.5 16 11H4Z"/></svg></span></span>&nbsp; one benchmark iteration after awakening from one second of deep-sleep</td>
 </tr>
 </tbody>
 </table>
